--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Simple Interest Calculator</h1>
 
         Amount <input type="number"  id="principal" onchange="Amount()">  <br/>
-        Rate <input type="range" id="rate" min="0" max="20" step="0.25" value="10.25" onchange="getRate()">
+        Rate <input type="range" id="rate" max="20" step="0.25" value="10.25" onchange="getRate()">
             <span id="rateSpan">10.50%</span>  <br/>
                   No. of Years  
                     <select name="years" id="years">
